--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?199581093"/>
-  <link rel="stylesheet" type="text/css" href="css/publications.css?189618608" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/publications.css?136127540" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -29,14 +29,53 @@ var __adobewebfontsappname__ = "muse";
    </head>
  <body>
 
-  <div class="shadow clearfix" id="page"><!-- group -->
-   <a class="anchor_item grpelem" id="top"></a>
-   <div class="clearfix" id="u322-3"><!-- content -->
-    <p>&nbsp;</p>
-   </div>
-   <div class="clearfix grpelem" id="pu392-4"><!-- column -->
+  <div class="shadow clearfix" id="page"><!-- column -->
+   <div class="position_content" id="page_position_content">
+    <a class="anchor_item colelem" id="top"></a>
+    <div class="clearfix colelem" id="pu322-3"><!-- group -->
+     <div class="clearfix" id="u322-3"><!-- content -->
+      <p>&nbsp;</p>
+     </div>
+     <a class="nonblock nontext" id="u226" href="index.html"><!-- svg --><img class="svg" src="images/pasted%20svg%2044x50.svg" width="34" height="39" alt="" data-mu-svgfallback="images/pasted%20svg%2044x50_poster_.png"/></a>
+     <nav class="MenuBar clearfix" id="menuu136"><!-- horizontal box -->
+      <div class="MenuItemContainer clearfix grpelem" id="u137"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u138" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u139-4"><!-- content --><p>GCA Lab</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u151"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u154" href="research.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u156-4"><!-- content --><p>Research</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u237"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u238" href="resources.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u240-4"><!-- content --><p>Resources</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u165"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u168" href="publications.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u171-4"><!-- content --><p>Publications</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u144"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u145" href="courses.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u146-4"><!-- content --><p>Courses</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u158"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u161" href="lab-members.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u164-4"><!-- content --><p>Lab Members</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u172"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
+      </div>
+     </nav>
+    </div>
     <div class="clearfix colelem" id="u392-4"><!-- content -->
      <p>PUBLICATIONS</p>
+    </div>
+    <div class="clearfix colelem" id="u1291-4"><!-- content -->
+     <p>Cover Issues</p>
+    </div>
+    <div class="clearfix colelem" id="pu1249"><!-- group -->
+     <a class="nonblock nontext clip_frame grpelem" id="u1249" href="http://link.springer.com/journal/239/79/5"><!-- image --><img class="block" id="u1249_img" src="images/pasted%20image%2065x88.jpg" alt="" width="65" height="88"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1255" href="http://www.cell.com/structure/issue?pii=S0969-2126(11)X0014-X"><!-- image --><img class="block" id="u1255_img" src="images/pasted%20image%2067x87.jpg" alt="" width="68" height="88"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1243" href="http://onlinelibrary.wiley.com/doi/10.1002/bies.v32:8/issuetoc"><!-- image --><img class="block" id="u1243_img" src="images/pasted%20image%2067x88.png" alt="" width="67" height="88"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1285" href="http://www.wiley.com/WileyCDA/WileyTitle/productCd-0470195142.html"><!-- image --><img class="block" id="u1285_img" src="images/image.jpg" alt="" width="59" height="88"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1261" href="http://link.springer.com/journal/239"><!-- image --><img class="block" id="u1261_img" src="images/pasted%20image%2066x88.jpg" alt="" width="66" height="88"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1267" href="http://onlinelibrary.wiley.com/doi/10.1002/cplx.v14:5/issuetoc"><!-- image --><img class="block" id="u1267_img" src="images/pasted%20image%2068x88.jpg" alt="" width="68" height="88"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1273" href="http://www.cell.com/structure/issue?pii=S0969-2126%252809%2529X0002-X"><!-- image --><img class="block" id="u1273_img" src="images/pasted%20image%2068x882.jpg" alt="" width="68" height="88"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1279" href="http://genome.cshlp.org/content/17/11.cover-expansion"><!-- image --><img class="block" id="u1279_img" src="images/pasted%20image%2068x89.jpg" alt="" width="68" height="88"/></a>
     </div>
     <div class="clearfix colelem" id="u820-788"><!-- content -->
      <p id="u820-3"><a class="nonblock" href="publications.html#top"><span id="u820">_________________________________________________________</span></a></p>
@@ -530,40 +569,14 @@ var __adobewebfontsappname__ = "muse";
      <p id="u820-784"><a class="nonblock anim_swing" href="publications.html#top"><span id="u820-773">Top</span></a><span id="u820-775"> / </span><a class="nonblock anim_swing" href="publications.html#books"><span id="u820-776">Books</span></a><span id="u820-778"> / </span><a class="nonblock anim_swing" href="publications.html#articles"><span id="u820-779">Articles in Peer-reviewed Journals</span></a><span id="u820-781"> / </span><a class="nonblock anim_swing" href="publications.html#chapters"><span id="u820-782">Chapters in Books and Proceedings</span></a></p>
      <p id="u820-786">_________________________________________________________</p>
     </div>
-   </div>
-   <div class="clearfix grpelem" id="pu226"><!-- group -->
-    <a class="nonblock nontext" id="u226" href="index.html"><!-- svg --><img class="svg" src="images/pasted%20svg%2044x50.svg" width="34" height="39" alt="" data-mu-svgfallback="images/pasted%20svg%2044x50_poster_.png"/></a>
-    <nav class="MenuBar clearfix" id="menuu136"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u137"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u138" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u139-4"><!-- content --><p>GCA Lab</p></div></a>
+    <div class="verticalspacer"></div>
+    <div class="clearfix colelem" id="pu321-4"><!-- group -->
+     <div class="clearfix grpelem" id="u321-4"><!-- content -->
+      <p><span id="u321">Gustavo Caetano-Anollés Lab - Evolutionary Bioinformatics at UIUC</span></p>
      </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u151"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u154" href="research.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u156-4"><!-- content --><p>Research</p></div></a>
+     <div class="clearfix grpelem" id="u334-26"><!-- content -->
+      <p><a class="nonblock" href="index.html">Home</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
      </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u237"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u238" href="resources.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u240-4"><!-- content --><p>Resources</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u165"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u168" href="publications.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u171-4"><!-- content --><p>Publications</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u144"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u145" href="courses.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u146-4"><!-- content --><p>Courses</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u158"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u161" href="lab-members.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u164-4"><!-- content --><p>Lab Members</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u172"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
-     </div>
-    </nav>
-   </div>
-   <div class="verticalspacer"></div>
-   <div class="clearfix grpelem" id="pu321-4"><!-- group -->
-    <div class="clearfix grpelem" id="u321-4"><!-- content -->
-     <p><span id="u321">Gustavo Caetano-Anollés Lab - Evolutionary Bioinformatics at UIUC</span></p>
-    </div>
-    <div class="clearfix grpelem" id="u334-26"><!-- content -->
-     <p><a class="nonblock" href="index.html">Home</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
     </div>
    </div>
   </div>
