--- a/publications.html
+++ b/publications.html
@@ -12,8 +12,8 @@
   <title>Publications</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?199581093"/>
-  <link rel="stylesheet" type="text/css" href="css/publications.css?136127540" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3837146013"/>
+  <link rel="stylesheet" type="text/css" href="css/publications.css?3940746256" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -64,18 +64,19 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix colelem" id="u392-4"><!-- content -->
      <p>PUBLICATIONS</p>
     </div>
-    <div class="clearfix colelem" id="u1291-4"><!-- content -->
+    <div class="clearfix colelem" id="u1291-5"><!-- content -->
      <p>Cover Issues</p>
+     <p>&nbsp;</p>
     </div>
-    <div class="clearfix colelem" id="pu1249"><!-- group -->
-     <a class="nonblock nontext clip_frame grpelem" id="u1249" href="http://link.springer.com/journal/239/79/5"><!-- image --><img class="block" id="u1249_img" src="images/pasted%20image%2065x88.jpg" alt="" width="65" height="88"/></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u1255" href="http://www.cell.com/structure/issue?pii=S0969-2126(11)X0014-X"><!-- image --><img class="block" id="u1255_img" src="images/pasted%20image%2067x87.jpg" alt="" width="68" height="88"/></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u1243" href="http://onlinelibrary.wiley.com/doi/10.1002/bies.v32:8/issuetoc"><!-- image --><img class="block" id="u1243_img" src="images/pasted%20image%2067x88.png" alt="" width="67" height="88"/></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u1285" href="http://www.wiley.com/WileyCDA/WileyTitle/productCd-0470195142.html"><!-- image --><img class="block" id="u1285_img" src="images/image.jpg" alt="" width="59" height="88"/></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u1261" href="http://link.springer.com/journal/239"><!-- image --><img class="block" id="u1261_img" src="images/pasted%20image%2066x88.jpg" alt="" width="66" height="88"/></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u1267" href="http://onlinelibrary.wiley.com/doi/10.1002/cplx.v14:5/issuetoc"><!-- image --><img class="block" id="u1267_img" src="images/pasted%20image%2068x88.jpg" alt="" width="68" height="88"/></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u1273" href="http://www.cell.com/structure/issue?pii=S0969-2126%252809%2529X0002-X"><!-- image --><img class="block" id="u1273_img" src="images/pasted%20image%2068x882.jpg" alt="" width="68" height="88"/></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u1279" href="http://genome.cshlp.org/content/17/11.cover-expansion"><!-- image --><img class="block" id="u1279_img" src="images/pasted%20image%2068x89.jpg" alt="" width="68" height="88"/></a>
+    <div class="clearfix colelem" id="pu1334"><!-- group -->
+     <a class="nonblock nontext clip_frame grpelem" id="u1334" href="http://link.springer.com/journal/239/79/5"><!-- image --><img class="block" id="u1334_img" src="images/image9.jpg" alt="" width="83" height="107"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1328" href="http://www.cell.com/structure/issue?pii=S0969-2126(11)X0014-X"><!-- image --><img class="block" id="u1328_img" src="images/image8.jpg" alt="" width="83" height="107"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1322" href="http://onlinelibrary.wiley.com/doi/10.1002/bies.v32:8/issuetoc"><!-- image --><img class="block" id="u1322_img" src="images/image7.jpg" alt="" width="81" height="107"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1316" href="http://www.wiley.com/WileyCDA/WileyTitle/productCd-0470195142.html"><!-- image --><img class="block" id="u1316_img" src="images/image6.jpg" alt="" width="71" height="107"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1310" href="http://link.springer.com/journal/239"><!-- image --><img class="block" id="u1310_img" src="images/image5.jpg" alt="" width="80" height="107"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1304" href="http://onlinelibrary.wiley.com/doi/10.1002/cplx.v14:5/issuetoc"><!-- image --><img class="block" id="u1304_img" src="images/image4.jpg" alt="" width="82" height="107"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1298" href="http://www.cell.com/structure/issue?pii=S0969-2126%252809%2529X0002-X"><!-- image --><img class="block" id="u1298_img" src="images/image3.jpg" alt="" width="78" height="107"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1292" href="http://genome.cshlp.org/content/17/11.cover-expansion"><!-- image --><img class="block" id="u1292_img" src="images/image2.jpg" alt="" width="78" height="107"/></a>
     </div>
     <div class="clearfix colelem" id="u820-788"><!-- content -->
      <p id="u820-3"><a class="nonblock" href="publications.html#top"><span id="u820">_________________________________________________________</span></a></p>
