--- a/courses.html
+++ b/courses.html
@@ -11,9 +11,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?3879086630"/>
   <title>Courses</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?199581093"/>
-  <link rel="stylesheet" type="text/css" href="css/courses.css?3885666374" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?531754911"/>
+  <link rel="stylesheet" type="text/css" href="css/courses.css?3862154274" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -74,7 +74,7 @@ var __adobewebfontsappname__ = "muse";
      <p id="u408-25">[<a class="nonblock" href="http://www.cropsci.illinois.edu/faculty/gca/GCA.data/PDF/Bioinformatics.pdf">pdf</a>] Download white paper, &quot;Teaching Bioinformatics: Needs and Challenges&quot;</p>
      <p id="u408-26">&nbsp;</p>
      <p id="u408-27">&nbsp;</p>
-     <p id="u408-31"><span id="u408-28">​</span><span><span class="actAsInlineDiv normal_text" id="u453"><!-- content --><span class="actAsDiv clip_frame excludeFromNormalFlow" id="u447"><!-- image --><img id="u447_img" src="images/books.png" alt="" width="98" height="98"/></span></span></span><span></span></p>
+     <p id="u408-31"><span id="u408-28">​</span><span><span class="actAsInlineDiv normal_text" id="u1354"><!-- content --><span class="actAsDiv clip_frame clearfix excludeFromNormalFlow" id="u1348"><!-- image --><span class="actAsDiv" id="u1348_clip"><img class="position_content" id="u1348_img" src="images/network2.jpg" alt="" width="99" height="98"/></span></span></span></span><span></span></p>
      <p id="u408-33">CPSC 567 / IB 505</p>
      <p id="u408-35">BIOINFORMATICS AND SYSTEMS BIOLOGY</p>
      <p id="u408-36">&nbsp;</p>
