--- a/lab-members.html
+++ b/lab-members.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "lab-members.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "lab-members.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,8 +12,8 @@
   <title>Lab Members</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?531754911"/>
-  <link rel="stylesheet" type="text/css" href="css/lab-members.css?129811882" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?303368033"/>
+  <link rel="stylesheet" type="text/css" href="css/lab-members.css?3847197080" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -35,8 +35,8 @@ var __adobewebfontsappname__ = "muse";
      <p>&nbsp;</p>
     </div>
     <nav class="MenuBar clearfix pinned-colelem" id="menuu136"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u137"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u138" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u139-4"><!-- content --><p>GCA Lab</p></div></a>
+     <div class="MenuItemContainer clearfix grpelem" id="u1394"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1395" href="gca.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1396-4"><!-- content --><p>GCA Lab</p></div></a>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u151"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u154" href="research.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u156-4"><!-- content --><p>Research</p></div></a>
